--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "tailwindcss": "^1.0.6",
     "vue-template-compiler": "^2.6.10"
   }
 }
