--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "normalizr": "^3.4.0",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
