--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "lodash": "^4.17.15",
     "normalizr": "^3.4.0",
+    "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
